Fix filter on small screen

--- a/src/public/sass/_filter-page.scss
+++ b/src/public/sass/_filter-page.scss
@@ -19,6 +19,7 @@
 
 .enhanced .filter {
 	position: sticky;
+	z-index: 10;
 	top: 0;
 	padding-top: 10px;
 	padding-bottom: 10px;
